Added prisma, migrations, api endpoints for employee data and swagger documentation
