# backend/src/routes/employeeRoute.ts
@@ -1,72 +1,70 @@
-import express from "express";
+import express from 'express';
+import {
+  getAllEmployees,
+  getEmployeeById,
+  deleteEmployees,
+  updateEmployee,
+  createEmployee,
+} from '../services/employeeService.js';
+import { IEmployee } from '../types/types.js';
+import { asyncHandler } from '../middleware/asyncHandler.js';
 
 const router = express.Router();
 
-/**
- * @openapi
- * /employee:
- *   get:
- *     tags:
- *       - Employee
- *     summary: Get basic employee route message
- *     description: Returns a simple text response for testing.
- *     responses:
- *       200:
- *         description: Successful response
- *         content:
- *           text/plain:
- *             schema:
- *               type: string
- *               example: Employee route
- */
-router.get("/", (request, response) => {
-  response.send("Employee route");
-});
-/**
- * @openapi
- * /employee/{id}:
- *   get:
- *     tags:
- *       - Employee
- *     summary: Get employee by ID
- *     parameters:
- *       - in: path
- *         name: id
- *         required: true
- *         schema:
- *           type: string
- *         description: The employee ID
- *     responses:
- *       200:
- *         description: Returns employee info
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 message:
- *                   type: string
- *                 id:
- *                   type: string
- */
-router.get("/:id", (request, response) => {
-  response.send(`BY ID: ${request.params.id}`);
-});
+router.get(
+  '/',
+  asyncHandler(async (req, res) => {
+    const page = parseInt(req.query.page as string) || 1;
+    const limit = parseInt(req.query.limit as string) || 10;
+    const skip = (page - 1) * limit;
 
-router.put("/:id", (request, response) => {
-  response.send(`BY ID: ${request.params.id}`);
+    const { employees, total } = await getAllEmployees({ skip, take: limit });
 
-  // handle put update
-  // service call to get the update
-});
-router.post("/", (request, response) => {
-  // handle post here
-  // service call here to update
-});
+    res.status(200).json({
+      page,
+      limit,
+      total,
+      totalPages: Math.ceil(total / limit),
+      employees,
+    });
+  })
+);
 
-router.delete("/", (request, response) => {
-  // handle many deletions or one parse from array request
-  //service call it
-});
+router.get(
+  '/:id',
+  asyncHandler(async (req, res) => {
+    const employee = await getEmployeeById(req.params.id);
+    res.status(200).json({ employee });
+  })
+);
+
+router.put(
+  '/:id',
+  asyncHandler(async (req, res) => {
+    const id = req.params.id;
+    const updateBody = req.body as IEmployee;
+
+    const updatedEmployee = await updateEmployee(id, updateBody);
+    res.status(200).json({ updatedEmployee });
+  })
+);
+
+router.post(
+  '/',
+  asyncHandler(async (req, res) => {
+    const newEmployee = req.body as IEmployee;
+    const created = await createEmployee(newEmployee);
+    res.status(201).json({ created });
+  })
+);
+
+router.delete(
+  '/',
+  asyncHandler(async (req, res) => {
+    const ids: string[] = req.body.ids;
+    const deletedCount = await deleteEmployees(ids);
+    res.status(200).json({ deleted: deletedCount });
+  })
+);
 
 export default router;
